Creación del footer, sin el CSS

--- a/personal-web/src/app/header/header.component.html
+++ b/personal-web/src/app/header/header.component.html
@@ -1,3 +1,6 @@
-<p>
-  header works!
-</p>
+<nav>
+  <a routerLink="/about">About me</a>
+  <a routerLink="/resumen">Resumen</a>
+  <a routerLink="/proyectos">Proyectos</a>
+  <a routerLink="/contacto">Contacto</a>
+</nav>
