Cambios más recientes

--- a/personal-web/src/app/header/header.component.html
+++ b/personal-web/src/app/header/header.component.html
@@ -1,6 +1,9 @@
-<nav>
-  <a routerLink="/about">About me</a>
-  <a routerLink="/resumen">Resumen</a>
-  <a routerLink="/proyectos">Proyectos</a>
-  <a routerLink="/contacto">Contacto</a>
+<nav class="nav-mayor">
+  <ul class="name">
+    <li>Wilton Martinez / Ingeniero de Sistemas</li>
+  </ul>
+  <a class="about" routerLink="/about">About me</a>
+  <a class="resumen" routerLink="/resumen">Resumen</a>
+  <a class="proyecto" routerLink="/proyectos">Proyectos</a>
+  <a class="contacto" routerLink="/contacto">Contacto</a>
 </nav>
