--- a/personal-web/src/styles.css
+++ b/personal-web/src/styles.css
@@ -1,1 +1,15 @@
 /* You can add global styles to this file, and also import other style files */
+
+* {
+  box-sizing: border-box;
+  margin: 0;
+  padding: 0;
+}
+
+html {
+  font-size: 62.5%;
+  font-family: 'Noto Sans Display', sans-serif;
+}
+
+
+
