--- a/personal-web/src/app/footer/footer.component.html
+++ b/personal-web/src/app/footer/footer.component.html
@@ -1,7 +1,7 @@
 <footer class="mayor">
 
   <div class="pie-page">
-    <div class="derecho"> 2021 by Wilton Martinez</div>
+    <div class="derecho"> 2021 by Wilton Martinez <br> Universidad de los Andes </div>
     <div class="telefono"> Llama </div>
     <div class="correo"> Escribe </div>
     <div class="redes"> Redes Sociales</div>
