--- a/personal-web/src/app/header/header.component.css
+++ b/personal-web/src/app/header/header.component.css
@@ -2,43 +2,65 @@
 {
   --decoracion: none;
   --organizar-display: inline-block;
-  --color: white;
+
 }
 
 
-.nav-mayor
+nav
 {
 
+  width: 100%;
   font-size: 2.0rem;
   background-color: #4d4dff;
-  color: white;
-  padding-top: 40px;
+  height: 130px;
+  /*padding-top: 40px;
   padding-bottom: 40px;
+  */
+  display: grid;
+  grid-template-columns: 1fr 1fr;
 }
 
 
-.name
+nav .nav-name
 {
-  display: inline-block;
-  margin-left: 100px;
-  list-style-type: square;
-  color: white;
+  justify-self: start;
+  align-self: center;
+  margin-left: 50px;
+
 }
+
+nav .nav-name a
+{
+  color: white;
+  text-decoration:  var(--decoracion);
+  font-size: 2.8rem;
+}
+
+
+
+nav .nav-links-container {
+
+  display: grid;
+  place-self: center;
+
+}
+
+
+
 
 
 .about
 {
-  margin-left: 430px;
+
   text-decoration: var(--decoracion);
-  display: inline-block;
   color: white;
-  
+
 }
 
 .resumen
 {
   text-decoration: var(--decoracion);
-  display: inline-block;
+
   padding-left: 25px;
   color: white;
 }
@@ -47,7 +69,6 @@
 .proyecto
 {
   text-decoration: var(--decoracion);
-  display: inline-block;
   padding-left: 25px;
   color: white;
 }
@@ -56,7 +77,7 @@
 .contacto
 {
   text-decoration: var(--decoracion);
-  display: inline-block;
+
   padding-left: 25px;
   color: white;
 }
