--- a/personal-web/src/app/header/header.component.html
+++ b/personal-web/src/app/header/header.component.html
@@ -1,9 +1,16 @@
-<nav class="nav-mayor">
-  <ul class="name">
-    <li>Wilton Martinez / Ingeniero de Sistemas</li>
-  </ul>
-  <a class="about" routerLink="/about">About me</a>
-  <a class="resumen" routerLink="/resumen">Resumen</a>
-  <a class="proyecto" routerLink="/proyectos">Proyectos</a>
-  <a class="contacto" routerLink="/contacto">Contacto</a>
-</nav>
+<header>
+  <nav>
+    <section class="nav-name">
+      <a href="/">Wilton Martinez / Ingeniero de Sistemas</a>
+    </section>
+
+    <section class="nav-links-container">
+      <div class="links">
+        <a class="about" routerLink="/about">About me</a>
+        <a class="resumen" routerLink="/resumen">Resumen</a>
+        <a class="proyecto" routerLink="/proyectos">Proyectos</a>
+        <a class="contacto" routerLink="/contacto">Contacto</a>
+      </div>
+    </section>
+  </nav>
+</header>
