--- a/personal-web/src/app/about/about.component.css
+++ b/personal-web/src/app/about/about.component.css
@@ -1,119 +1,104 @@
-:root
-{
+:root {
   --decoracion: none;
   --organizar-display: inline-block;
+}
+
+main {
+  width: 100%;
+  display: grid;
+  grid-template-columns: repeat(2, 1fr);
+
 
 }
 
+main .main-perfil {
 
-.lado1
-{
-  width: 700px;
+  padding-top: 30px;
   height: 500px;
-  /*background-color: #d2e9ff;*/
   position: relative;
+  place-self: center;
 
 }
 
-.contenedor
-{
-  display: flex;
-}
-
-img
-{
-  width: 25vw;
-    height: 50vh;
-    border-radius: 180px;
-}
-
-.nombre 
-{
-  font-size: 3.0rem;
-  text-align: center;
-  padding-top: 10px;
-}
+main .main-perfil .main-perfil-container {
 
 
-.profesion{
-  text-align: center;
-  font-size: 1.5rem;
-  padding-top: 10px;
-  padding-bottom: 10px;
-  border-bottom: #4d4dff solid 3px ;
-}
-
-.redes-value
-{
-  
-  margin-left: 130px;
- /* background-color: green;*/
-  display: var(--organizar-display);
-  text-align: center;
-}
-
-
-
-.facebook
-{
-
- 
-  display: var(--organizar-display) ;
-  color: #884dff;
-}
-
-.linkedin
-{
-  padding-left: 15px;
-  display: var(--organizar-display) ;
-  color: #884dff;
-
-}
-
-.instagram
-{
-  padding-left: 15px;
-  display: var(--organizar-display) ;
-  color: #884dff;
-}
-
-.sub-section
-{
-  /*border: black solid 1px;*/
-  position: absolute;
+  display: grid;
+  grid-template-columns: 1fr;
+  width: 300px;
   top: 10px;
   left: 150px;
   padding-bottom: 10px;
   box-shadow: -5px 5px 5px #4d4dff;
+
 }
 
-.lado2
-{
-  width: 700px;
+main .main-perfil .main-perfil-container img {
+  width: 100%;
+  border-radius: 250px;
+  object-fit: contain;
+}
+
+
+
+.nombre {
+  font-size: 3rem;
+  text-align: center;
+  padding-top: 10px;
+}
+
+.profesion {
+  text-align: center;
+  font-size: 1.5rem;
+  padding-top: 10px;
+  padding-bottom: 10px;
+  border-bottom: #4d4dff solid 3px;
+}
+
+.redes-value {
+
+  /* background-color: green;*/
+  display: var(--organizar-display);
+  text-align: center;
+}
+
+.facebook {
+  display: var(--organizar-display);
+  color: #884dff;
+}
+
+.linkedin {
+  padding-left: 15px;
+  display: var(--organizar-display);
+  color: #884dff;
+}
+
+.instagram {
+  padding-left: 15px;
+  display: var(--organizar-display);
+  color: #884dff;
+}
+
+.main-descripcion {
+  width: 100%;
   height: 500px;
   /*background-color: #d2e9ff;*/
   /*border: black solid 1px;*/
-  border-left: #4d4dff solid 3px ;
+  border-left: #4d4dff solid 3px;
   position: relative;
 }
 
-.sub-2
-{
+main .main-descripcion .main-descripcion-container {
   position: absolute;
   text-align: center;
   border: black solid 2px;
 }
 
-.saludo
-{
-
-  font-size: 4.0rem;
+.saludo {
+  font-size: 4rem;
   text-align: center;
 }
 
-.descripcion
-{
-
-  font-size: 2.0rem;
-  
+.descripcion {
+  font-size: 2rem;
 }
