--- a/personal-web/src/app/about/about.component.html
+++ b/personal-web/src/app/about/about.component.html
@@ -5,7 +5,7 @@
   <section class="main-perfil">
     <div class="main-perfil-container">
       <figure class="image">
-        <img src="../../assets/image/wilton1.jpeg" alt="foto de Wilton Martinez">
+        <img src="../../assets/image/wilton3.jpeg" alt="foto de Wilton Martinez">
       </figure>
       <h3 class="nombre">Wilton Martinez</h3>
       <p class="profesion">Ingeniero de Sistemas</p>
@@ -46,9 +46,17 @@
   </section>
 
   <section class="main-descripcion">
-    <div class="main-descripcion-container">
-      <h1 class="saludo">Hola</h1>
-      <p class="descripcion">Soy Wilton Martinez y desarrollador de Software</p>
+
+      <h1 class="saludo">Hello</h1>
+      <p class="descripcion">Soy Wilton Martinez tengo 21 años de edad, actualmente estudio Ingenieria de Sistemas
+        y Computación en la Universidad de los Andes. <br> <br>
+      Mis principales campos de interes son el desarrollo web, desarrollo de App y las ciencias de datos. En los tiempos libres me gusta
+    practicar el fútbol, ver peliculas y documentales.</p>
+
+    <div class="botones">
+      <button class="btn" routerLink="/resumen">Resumen
+      </button>
+      <button class="btn" routerLink="/proyectos">Proyectos</button>
     </div>
   </section>
 
