Implementación del componente de recursos

--- a/personal-web/src/app/resumen/resumen.component.html
+++ b/personal-web/src/app/resumen/resumen.component.html
@@ -1,4 +1,53 @@
 
 <app-header></app-header>
-<p>Breve resumen de mis estudios</p>
+<main>
+
+<h1 class="resumen">Resumen</h1>
+
+
+<h2 class="educacion">Educación</h2>
+
+
+<section class="normal">
+  <div class="date-normal" > <p class="year">2016-2019</p>
+    <p class="institucion">Escuela Normal Superior de Quibdó</p>
+  <p class="ubicacion">Quibdó - Chocó</p></div>
+  <div class="description-normal">
+    <p>Termine mi bachillerato en la Institución Educativa Escuela Normal Superior de Quibdó, allí me gradue como educador a nivel de preescolar y ciclo básico primaria. Asimismo, dado mi puntaje en las pruebas ICFES SABER 11 obtuve una beca para adelantar mis estudios universitarios.</p>
+
+  </div>
+</section>
+
+
+
+<section class="andes">
+  <div class="date-andes"><p class="year2">2020-Presente</p>
+    <p class="universidad">Universidad de los Andes</p>
+    <p class="ubicacion2">Bogotá D.C</p></div>
+
+    <div class="description-andes">
+      <p>Actualmente estoy cursando el 5 semestre de Ingenieria de Sistemas y Computación, en la universidad de los Andes.</p>
+    </div>
+
+</section>
+
+
+
+<h2 class="experiencia">Experiencia</h2>
+
+<section class="empresa">
+  <div class="date-empresa"><p class="year3">2020-Presente</p>
+    <p class="universidad2">Universidad de los Andes</p>
+    <p class="ubicacion3">Bogotá D.C</p></div>
+
+    <div class="description-empresa">
+      <p>Hoy en día soy monitor del curso Sistemas Transaccionales, allí debo brindar orientar a los estudiantes y calificar determinadas activdades asignadas.</p>
+    </div>
+
+</section>
+
+
+
+
+</main>
 <app-footer></app-footer>
