--- a/personal-web/src/app/resumen/resumen.component.html
+++ b/personal-web/src/app/resumen/resumen.component.html
@@ -46,7 +46,25 @@
 
 </section>
 
+<section class="last">
 
+
+    <ul class="skills">
+      <h3>skills</h3>
+      <li>Trabajo en equipo y colaboración.</li>
+      <li>Buen manejo del tiempo.</li>
+      <li>Capacidad de resolución de problemas.</li>
+      <li>Actitud, responsabilidad y compromiso.</li>
+  </ul>
+
+  <ul class="lenguages">
+    <h3>Lenguages</h3>
+    <li>Inglés - Intermedio</li>
+    <li>Español - nativo</li>
+
+</ul>
+
+</section>
 
 
 </main>
