--- a/personal-web/src/app/proyecto/proyecto.component.html
+++ b/personal-web/src/app/proyecto/proyecto.component.html
@@ -1,5 +1,54 @@
 
 <app-header></app-header>
-<p>Estos son los proyectos</p>
+<main>
+
+<div class="introduccion">
+  <h1 class="title">Proyectos</h1>
+  <p class="description">Aqui se encuentra una lista de los proyectos en los que he participado, algunos son totalmente personales y otros son proyectos académicos de la universidad.</p>
+</div>
+
+<section class="moto">
+  <div class="moto-title">
+    <h3>Repuestos de motocicletas</h3>
+    <p> En el presente proyecto se creo un software que permite tener un control sobre las ventas de repuestos o partes de motocicletas. Allí se pueden buscar, vender y agregar nuevos partes de motocicletas para la gestión de un negocio que comercialice partes de motocicletas. </p>
+  </div>
+  <div class="image-moto">
+    <figure class="image1">
+      <img src="../../assets/image/taller.jpg" alt="foto de Wilton Martinez">
+    </figure>
+  </div>
+</section>
+
+<section class="ciclas">
+ <div class="ciclas-title">
+  <h3>Venta de bicicletas</h3>
+  <p> En este presente proyecto se creo un software que permite la venta de bicicletas, en este participaron otras personas, dado que fue un proyecto de un curso universitario.
+   </p>
+  </div>
+  <div class="image-ciclas">
+    <figure class="image2">
+      <img src="../../assets/image/bici.jpg" alt="foto de Wilton Martinez">
+    </figure>
+
+  </div>
+
+</section>
+
+<section class="web">
+  <div class="web-title">
+    <h3>Página web personal</h3>
+    <p>Este proyecto cree mi página web personal, la cual pueden observar ahora mismo. Adjunto el enlace al repositorio para el código fuente.</p>
+  </div>
+  <div class="image-web">
+    <figure class="image3">
+      <img src="../../assets/image/will.jpg" alt="foto de Wilton Martinez">
+    </figure>
+
+
+  </div>
+
+</section>
+
+</main>
 <app-footer></app-footer>
 
