--- a/personal-web/src/app/proyecto/proyecto.component.html
+++ b/personal-web/src/app/proyecto/proyecto.component.html
@@ -14,10 +14,12 @@
   </div>
   <div class="image-moto">
     <figure class="image1">
-      <img src="../../assets/image/taller.jpg" alt="foto de Wilton Martinez">
+      <a href="https://github.com/Wilton2612/Ventas-Repuestos" target="_blank"> <img src="../../assets/image/taller.jpg" alt="imagen del repositorio taller de motos" ></a>
+
     </figure>
   </div>
 </section>
+
 
 <section class="ciclas">
  <div class="ciclas-title">
@@ -27,7 +29,7 @@
   </div>
   <div class="image-ciclas">
     <figure class="image2">
-      <img src="../../assets/image/bici.jpg" alt="foto de Wilton Martinez">
+      <a href="https://github.com/Wilton2612/Venta-bicicletas" target="_blank"> <img src="../../assets/image/bici.jpg" alt="imagen del repositorio de venta de bicicletas" ></a>
     </figure>
 
   </div>
@@ -41,9 +43,9 @@
   </div>
   <div class="image-web">
     <figure class="image3">
-      <img src="../../assets/image/will.jpg" alt="foto de Wilton Martinez">
-    </figure>
+      <a href="https://github.com/Wilton2612/web-personal" target="_blank"> <img src="../../assets/image/will.jpg" alt="imagen del repositorio de esta página web" ></a>
 
+    </figure>
 
   </div>
 
