--- a/personal-web/src/app/contacto/contacto.component.html
+++ b/personal-web/src/app/contacto/contacto.component.html
@@ -4,27 +4,28 @@
   <section class="title">
     <h2>Escribeme</h2>
   </section>
-  <form class="principal" action="" method="post">
+  <form class="principal" [formGroup]="datos">
     <ul>
-      <li>
+      <!----  <li>
         <label for="name">Nombre completo</label>
-        <input type="text" id="name" name="user_name">
-      </li>
+        <input type="text" id="name" name="user_name" placeholder="">
+      </li>  -->
+
 
       <li>
         <label for="mail">Correo electrónico</label>
-        <input type="email" id="mail" name="user_mail">
+        <input type="email" id="mail" name="user_mail" formControlName="correo">
       </li>
       <li>
         <label for="msg">Asunto</label>
-        <input id="msg_asunto" name="user_asunto" size="15" maxlength="30">
+        <input id="msg_asunto" name="user_asunto" size="15" maxlength="30" formControlName="asunto">
       </li>
       <li>
         <label for="msg">Mensaje</label>
-        <textarea id="msg" name="user_message"></textarea>
+        <textarea id="msg" name="user_message" placeholder="Escribele a Wilton" formControlName="mensaje"></textarea>
       </li>
       <li class="button">
-        <button type="submit">Enviar</button>
+        <button type="submit" (click)="envio()">Enviar</button>
       </li>
      </ul>
 
