--- a/personal-web/src/app/about/about.component.html
+++ b/personal-web/src/app/about/about.component.html
@@ -1,9 +1,20 @@
 <app-header></app-header>
 
+<head>
+  <!---Titulo-->
+  <link rel="preconnect" href="https://fonts.googleapis.com">
+<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+<link href="https://fonts.googleapis.com/css2?family=Noto+Sans+Display:wght@400;800&family=Roboto:wght@500;900&display=swap" rel="stylesheet">
 
+<!-- Descripción-->
+  <link rel="preconnect" href="https://fonts.googleapis.com">
+  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+  <link href="https://fonts.googleapis.com/css2?family=Noto+Sans+Display:wght@400;800&family=Roboto:wght@900&display=swap" rel="stylesheet">
+</head>
 <main>
   <section class="main-perfil">
-    <div class="main-perfil-container">
+
+    <!-- <div class="main-perfil-container">
       <figure class="image">
         <img src="../../assets/image/wilton3.jpeg" alt="foto de Wilton Martinez">
       </figure>
@@ -12,7 +23,7 @@
 
       <div class="redes-value">
 
-        <!-- FACEBOOK-->
+       FACEBOOK
 
         <a class="facebook" href="https://www.facebook.com/profile.php?id=100004462594900" target="_blank">
           <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-facebook"
@@ -22,7 +33,7 @@
           </svg>
         </a>
 
-        <!-- LINKEDIN-->
+        LINKEDIN
 
         <a class="linkedin" href="https://www.linkedin.com/in/wilton-martínez-9b5ab81b9" target="_blank">
           <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-linkedin"
@@ -32,7 +43,7 @@
           </svg>
         </a>
 
-        <!-- INSTAGRAM-->
+         INSTAGRAM
 
         <a class="instagram" href="https://www.instagram.com/wiltosky_19/" target="_blank"><svg
             xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-instagram"
@@ -42,16 +53,18 @@
           </svg></a>
 
       </div>
+    </div>  -->
+    <div>
+      <img id="imagen-princial" src="../../assets/image/principal.svg" alt="imagen principal" >
     </div>
   </section>
 
   <section class="main-descripcion">
 
-      <h1 class="saludo">Hello</h1>
-      <p class="descripcion">Soy Wilton Martinez tengo 21 años de edad, actualmente estudio Ingenieria de Sistemas
-        y Computación en la Universidad de los Andes. <br> <br>
-      Mis principales campos de interes son el desarrollo web, desarrollo de App y las ciencias de datos. En los tiempos libres me gusta
-    practicar el fútbol, ver peliculas y documentales.</p>
+      <h2 class="saludo">Hola, soy Wilton Martinez </h2>
+      <p class="descripcion">Programador web (Frontend y Backend), con aproximadamente 1 año de experiencia en diferentes tecnologías como Angular, Java, Python, CSS y HTML.
+         <br> <br>
+         Actualmente, curso la carrera de Ingeniería de Sistemas y Computación, y me gustaría obtener un empleo para poner en práctica mi conocimiento tanto de la universidad como de los proyectos personales. Mi considero una persona responsable, autodidacta y con muchas ganas crear soluciones tecnológicas para las personas.</p>
 
     <div class="botones">
       <button class="btn" routerLink="/resumen">Resumen
