--- a/personal-web/src/app/header/header.component.html
+++ b/personal-web/src/app/header/header.component.html
@@ -1,12 +1,20 @@
 <header>
+
+  <head>
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link
+      href="https://fonts.googleapis.com/css2?family=Kanit:ital,wght@1,300&family=Noto+Sans+Display:wght@400;800&family=Roboto:wght@500;900&family=Secular+One&display=swap"
+      rel="stylesheet">
+  </head>
   <nav>
     <section class="nav-name">
-      <a href="/">Wilton Martinez / Ingeniero de Sistemas</a>
+      <a href="/">Wilton Martinez</a>
     </section>
 
     <section class="nav-links-container">
       <div class="links">
-        <a class="about" routerLink="/about">About me</a>
+        <a class="about" routerLink="/about">Home</a>
         <a class="resumen" routerLink="/resumen">Resumen</a>
         <a class="proyecto" routerLink="/proyectos">Proyectos</a>
         <a class="contacto" routerLink="/contacto">Contacto</a>
