--- a/personal-web/src/app/footer/footer.component.css
+++ b/personal-web/src/app/footer/footer.component.css
@@ -5,14 +5,15 @@
 
 footer {
   width: 100%;
-  height: 150px;
+  height: 100%;
   font-size: 1.5rem;
-  background-color: #884dff;
+  background-color: #242F9B;
   color: white;
   padding-top: 50px;
   padding-bottom: 50px;
   display: grid;
   grid-template-columns: repeat(2, 1fr);
+  font-family: 'Roboto', sans-serif;
 }
 
 footer .container-links-otros {
