--- a/personal-web/src/app/resumen/resumen.component.css
+++ b/personal-web/src/app/resumen/resumen.component.css
@@ -1,10 +1,7 @@
 :root {
   --decoracion: none;
   --organizar-display: inline-block;
-
 }
-
-
 
 main {
   width: 100%;
@@ -14,22 +11,158 @@ main {
   padding-left: 100px;
   padding-right: 100px;
   /*background-color: #7fddf0;*/
-
 }
 
-.resumen
-{
-  font-size: 4.0rem;
+main .resumen {
+  font-size: 4rem;
   color: black;
   text-align: center;
   border-bottom: #4d4dff solid 4px;
   margin-left: 200px;
   margin-right: 200px;
   margin-top: 20px;
+  margin-bottom: 30px;
+  font-family: 'Secular One', sans-serif;
+
+}
+
+main .title-tools {
+
+  margin-top: 70px;
+  text-align: center;
+  font-size: 2.7rem;
+  font-family: 'Secular One', sans-serif;
+}
+
+main .title-programming{
+
+  margin-top: 70px;
+  text-align: center;
+  font-size: 2.7rem;
+  font-family: 'Secular One', sans-serif;
 }
 
 
-h2{
+main .Lenguages-programming {
+
+  display: grid;
+  grid-template-columns: repeat(4, 1fr);
+  place-self: center;
+  padding-top: 8px;
+  position: relative;
+  border-radius: 5px 5px 5px 5px;
+  -webkit-box-shadow: -1px 6px 31px 2px rgba(77,77,255,1);
+  -moz-box-shadow: -1px 6px 31px 2px rgba(77,77,255,1);
+  box-shadow: -1px 6px 31px 2px rgba(77,77,255,1);
+}
+
+main .Lenguages-programming .css {
+  grid-column: 1 / span 4;
+  place-self: center;
+}
+
+main .Lenguages-programming div {
+  display: grid;
+  text-align: center;
+  grid-auto-columns: 180px;
+  justify-items: center;
+}
+
+div p
+{
+  font-size: 1.8rem;
+  font-family: 'Roboto', sans-serif;
+
+}
+
+
+main .tools {
+
+  display: grid;
+  grid-template-columns: repeat(4, 1fr);
+  place-self: center;
+  padding-top: 8px;
+  position: relative;
+  border-radius: 5px 5px 5px 5px;
+  -webkit-box-shadow: -1px 6px 31px 2px rgba(77,77,255,1);
+  -moz-box-shadow: -1px 6px 31px 2px rgba(77,77,255,1);
+  box-shadow: -1px 6px 31px 2px rgba(77,77,255,1);
+
+
+}
+
+main .tools div {
+  display: grid;
+  text-align: center;
+  /*grid-auto-columns: 192px;*/
+  justify-items: center;
+  grid-auto-columns: 180px
+}
+
+main .tools .flask{
+  grid-column: 1 / span 4;
+  place-self: center;
+}
+
+
+
+main .last {
+  place-self: center;
+  font-size: 2rem;
+  display: grid;
+  grid-template-columns: repeat(2, 1fr);
+
+  margin-top: 60px;
+  margin-left: 200px;
+  margin-right: 200px;
+  margin-bottom: 50px;
+  background-color: white;
+  border-radius: 5px 5px 5px 5px;
+
+
+
+  -webkit-box-shadow: -1px 6px 31px 2px rgba(77,77,255,1);
+-moz-box-shadow: -1px 6px 31px 2px rgba(77,77,255,1);
+box-shadow: -1px 6px 31px 2px rgba(77,77,255,1);
+}
+
+main .last .skills {
+  place-self: center;
+  margin-top: 10px;
+  margin-left: 10px;
+  margin-right: 10px;
+  margin-bottom: 10px;
+  list-style-type: none;
+}
+
+main .last .lenguages {
+  place-self: initial;
+  margin-top: 10px;
+  margin-left: 10px;
+  margin-right: 10px;
+  margin-bottom: 10px;
+  list-style-type: none;
+
+}
+li {
+  line-height: 40px;
+  border-bottom: #4d4dff solid 6px;
+  font-family: 'Roboto', sans-serif;
+}
+
+h3 {
+  margin-top: 10px;
+  margin-bottom: 20px;
+  color: #4d4dff;
+  font-weight: bold;
+  font-size: 2rem;
+  font-family: 'Secular One', sans-serif;
+}
+
+
+
+
+/*h2{
 
   font-size: 2.5rem;
   color: black;
@@ -39,9 +172,9 @@ h2{
   margin-right: 200px;
   margin-top: 100px;
 }
+*/
 
-
-
+/*
 main .normal
 {
   place-self: center;
@@ -248,72 +381,4 @@ main .empresa .description-empresa
   padding-bottom: 25px;
   color:black;
 }
-
-
-
-
-main .last
-{
-  place-self: center;
-  font-size: 2.0rem;
-  border-radius: 5px 5px 5px 5px;
-  border: 2px solid #4d4dff ;
-  box-shadow: 7px 7px 15px #4d4dff ;
-  background-color: white;
-  display: grid;
-  grid-template-columns: repeat(2 ,1fr);
-
-  margin-top: 60px;
-  margin-left: 200px;
-  margin-right: 200px;
-  background-color: white;
-  margin-bottom: 50px;
-  border-radius: 5px 5px 5px 5px;
-  border: 2px solid #4d4dff ;
-  box-shadow: 7px 7px 15px #4d4dff ;
-
-}
-
-
-main .last .skills
-{
-  place-self: center;
-  margin-top: 10px;
-  margin-left: 10px;
-  margin-right: 10px;
-  margin-bottom: 10px;
-  list-style-type:none;
-
-}
-
-main .last .lenguages
-{
-  place-self: initial;
-  margin-top: 10px;
-  margin-left: 10px;
-  margin-right: 10px;
-  margin-bottom: 10px;
-  list-style-type:none;
-
-
-
-}
-li
-{
-  line-height: 40px;
-  border-bottom: #4d4dff solid 6px;
-}
-
-h3
-{
-margin-top: 10px;
-margin-bottom: 20px;
-color: #4d4dff;
-font-weight:bold;
-
-
-}
-
-
-
-
+*/
