--- a/personal-web/src/app/proyecto/proyecto.component.css
+++ b/personal-web/src/app/proyecto/proyecto.component.css
@@ -7,27 +7,28 @@ main {
 }
 
 main .introduccion {
-  color: black;
   text-align: center;
-  margin-left: 200px;
-  margin-right: 200px;
-  margin-top: 50px;
-  margin-bottom: 150px;
+  margin-left: 150px;
+  margin-right: 150px;
+  margin-top: 30px;
+
 }
 
 main .introduccion .title {
-  font-size: 4rem;
+  font-size: 3.5rem;
   font-weight: bolder;
   color: #4d4dff;
+  font-family: 'Secular One', sans-serif;
 }
 
 main .introduccion .description {
-  font-size: 3rem;
+  font-size: 2.5rem;
   text-align: justify;
   margin-left: 20px;
   border-left: #4d4dff solid 6px;
   padding-left: 30px;
   margin-top: 40px;
+  font-family: 'Roboto', sans-serif;
 }
 
 main .moto {
@@ -35,19 +36,51 @@ main .moto {
   display: grid;
   grid-template-columns: repeat(2, 1fr);
   margin-bottom: 100px;
+  margin-top: -80px;
   border-radius: 5px 5px 5px 5px;
   box-shadow: 7px 7px 15px #4d4dff;
+
+  -webkit-box-shadow: -1px 6px 31px 2px #646FD4;
+  -moz-box-shadow: -1px 6px 31px 2px #646FD4;
+  box-shadow: -1px 6px 31px 2px #646FD4;
 }
 
 main .moto .moto-title {
   place-self: center;
   margin-left: 70px;
   margin-bottom: 100px;
+
+
 }
+
 
 main .moto .image-moto {
   place-self: center;
 }
+
+main .moto .moto-title h3
+{
+  font-weight: bold;
+  font-size: 3rem;
+  border-left: #4d4dff solid 6px;
+  color: #4d4dff;
+  margin-top: 40px;
+  margin-bottom: 30px;
+  padding-left: 30px;
+  font-family: 'Secular One', sans-serif;
+
+
+}
+
+main .moto .moto-title p
+{
+  font-size: 2rem;
+  text-align: justify;
+  font-family: 'Roboto', sans-serif;
+
+}
+
+
 
 main .moto .image-moto img {
   max-width: 70%;
@@ -59,19 +92,6 @@ main .moto .image-moto img {
   margin-bottom: 30px;
 }
 
-p {
-  font-size: 2rem;
-  text-align: justify;
-}
-
-h3 {
-  font-weight: bold;
-  font-size: 3rem;
-  border-left: #4d4dff solid 6px;
-  color: #4d4dff;
-  margin-bottom: 30px;
-  padding-left: 30px;
-}
 
 main .ciclas {
   place-self: center;
@@ -80,6 +100,9 @@ main .ciclas {
   margin-bottom: 100px;
   border-radius: 5px 5px 5px 5px;
   box-shadow: 7px 7px 15px #4d4dff;
+  -webkit-box-shadow: -1px 6px 31px 2px #646FD4;
+  -moz-box-shadow: -1px 6px 31px 2px #646FD4;
+  box-shadow: -1px 6px 31px 2px #646FD4;
 }
 
 main .ciclas .ciclas-title {
@@ -88,8 +111,34 @@ main .ciclas .ciclas-title {
   margin-bottom: 100px;
 }
 
+
+
+
 main .ciclas .image-ciclas {
   place-self: center;
+}
+
+
+main .ciclas .ciclas-title h3
+{
+  font-weight: bold;
+  font-size: 3rem;
+  border-left: #4d4dff solid 6px;
+  color: #4d4dff;
+
+  margin-bottom: 30px;
+  padding-left: 30px;
+  font-family: 'Secular One', sans-serif;
+
+
+}
+
+main .ciclas .ciclas-title p
+{
+  font-size: 2rem;
+  text-align: justify;
+  font-family: 'Roboto', sans-serif;
+
 }
 
 main .ciclas .image-ciclas img {
@@ -109,6 +158,9 @@ main .web {
   margin-bottom: 100px;
   border-radius: 5px 5px 5px 5px;
   box-shadow: 7px 7px 15px #4d4dff;
+  -webkit-box-shadow: -1px 6px 31px 2px #646FD4;
+  -moz-box-shadow: -1px 6px 31px 2px #646FD4;
+  box-shadow: -1px 6px 31px 2px #646FD4;
 }
 
 main .web .web-title {
@@ -120,6 +172,28 @@ main .web .web-title {
 main .web .image-web {
   place-self: center;
 }
+
+main .web .web-title h3
+{
+  font-weight: bold;
+  font-size: 3rem;
+  border-left: #4d4dff solid 6px;
+  color: #4d4dff;
+  margin-bottom: 30px;
+  padding-left: 30px;
+  font-family: 'Secular One', sans-serif;
+
+
+}
+
+main .web .web-title p
+{
+  font-size: 2rem;
+  text-align: justify;
+  font-family: 'Roboto', sans-serif;
+
+}
+
 
 main .web .image-web img {
   max-width: 70%;
