--- a/personal-web/src/app/proyecto/proyecto.component.html
+++ b/personal-web/src/app/proyecto/proyecto.component.html
@@ -1,10 +1,26 @@
 
 <app-header></app-header>
+<head>
+  <!-- letras titulos proyectos-->
+  <link rel="preconnect" href="https://fonts.googleapis.com">
+  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+  <link
+    href="https://fonts.googleapis.com/css2?family=Alata&family=Kanit:ital,wght@1,300&family=Noto+Sans+Display:wght@400;800&family=Roboto:wght@500;900&family=Secular+One&display=swap"
+    rel="stylesheet">
+
+
+  <!-- titulo grande -->
+  <link rel="preconnect" href="https://fonts.googleapis.com">
+  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+  <link
+    href="https://fonts.googleapis.com/css2?family=Kanit:ital,wght@1,300&family=Noto+Sans+Display:wght@400;800&family=Roboto:wght@500;900&family=Secular+One&display=swap"
+    rel="stylesheet">
+</head>
 <main>
 
 <div class="introduccion">
   <h1 class="title">Proyectos</h1>
-  <p class="description">Aqui se encuentra una lista de los proyectos en los que he participado, algunos son totalmente personales y otros son proyectos académicos de la universidad.</p>
+  <p class="description">Aquí se encuentra una lista de los proyectos en los que he participado, algunos son totalmente personales y otros son proyectos académicos de la universidad.</p>
 </div>
 
 <section class="moto">
