--- a/personal-web/src/app/proyecto/proyecto.component.html
+++ b/personal-web/src/app/proyecto/proyecto.component.html
@@ -25,7 +25,7 @@
 
 <section class="moto">
   <div class="moto-title">
-    <h3>Repuestos de motocicletas</h3>
+    <h3>Repuestos motocicletas</h3>
     <p> En el presente proyecto se creo un software que permite tener un control sobre las ventas de repuestos o partes de motocicletas. Allí se pueden buscar, vender y agregar nuevos partes de motocicletas para la gestión de un negocio que comercialice partes de motocicletas. </p>
   </div>
   <div class="image-moto">
