--- a/personal-web/src/app/about/about.component.css
+++ b/personal-web/src/app/about/about.component.css
@@ -22,7 +22,7 @@ main .main-perfil {
   position: relative;
   place-self: center;
   margin-top: 40px;
-    margin-bottom: 30px
+  margin-bottom: 30px
 
 }
 
@@ -161,4 +161,58 @@ main .main-descripcion .botones .btn{
 .btn:hover {
   background-color:#884dff;
 }
+
+
+
+/*MEDIA QUERY PARA TABLETS*/
+@media(max-width: 768px)
+{
+
+  main{
+
+    grid-template-rows: repeat(2, 1fr);
+    grid-template-columns: none;
+
+  }
+
+  main .main-perfil {
+
+
+    height: 500px;
+    width:600px;
+    place-self: center;
+    margin-bottom: 0px;
+    margin-top: 80px
+
+  }
+
+  /*
+  main .main-perfil #imagen-princial
+  {
+
+    max-width: 90%;
+    max-height: 95%;
+    object-fit: contain;
+    place-self: center;
+    margin-left: 20px;
+
+  }*/
+  main .main-descripcion {
+
+    width:600px;
+    margin-right: 0px;
+
+  }
+
+  .saludo {
+    font-size:4rem;
+    place-self: center;
+    text-align: left;
+    font-family: 'Roboto', sans-serif;
+  }
+
+
+
+}
+
 
