--- a/personal-web/src/app/footer/footer.component.css
+++ b/personal-web/src/app/footer/footer.component.css
@@ -54,3 +54,34 @@ footer .container-links-otros .redes .instagram {
   color: white;
   padding-left: 10px;
 }
+
+
+
+/*MEDIA QUERY PARA TABLETS*/
+@media(max-width: 768px)
+{
+
+  footer {
+    width: 100%;
+    height: 100%;
+    font-size: 1.5rem;
+    background-color: #242F9B;
+    color: white;
+    padding-top: 50px;
+    padding-bottom: 50px;
+    display: grid;
+    grid-template-columns: repeat(2, 1fr);
+    font-family: 'Roboto', sans-serif;
+  }
+
+
+footer .container-links-otros {
+  grid-template-columns: none;
+  display: grid;
+  grid-template-rows: repeat(3, 1fr);
+  place-self: center;
+  gap: 10px;
+}
+
+
+}
