--- a/personal-web/src/app/header/header.component.css
+++ b/personal-web/src/app/header/header.component.css
@@ -55,3 +55,54 @@ nav .nav-links-container {
   padding-left: 25px;
   color: white;
 }
+
+
+
+/*MEDIA QUERY PARA TABLETS*/
+@media(max-width: 768px)
+{
+
+  nav {
+    width: 100%;
+    font-size: 2.3rem;
+    background-color:#646FD4;
+    height: 100px;
+    display: grid;
+    grid-template-columns: 1fr 1fr;
+    /*font-family: 'Roboto', sans-serif;*/
+    font-family: 'Secular One', sans-serif;
+
+  }
+
+  nav .nav-name {
+    justify-self: start;
+    align-self: center;
+    margin-left: 20px;
+  }
+
+}
+
+/*MEDIA QUERY PARA TELEFONOS*/
+@media(max-width: 300px)
+{
+
+  nav {
+    width: 100%;
+    height:9%;
+    position:fixed;
+
+    display: grid;
+    grid-template-rows: 1fr 1fr;
+    /*font-family: 'Roboto', sans-serif;*/
+    font-family: 'Secular One', sans-serif;
+    z-index: 1;
+
+  }
+
+  nav .nav-links {
+    display: grid;
+    grid-template-rows: 1fr 1fr;
+  }
+
+
+}
