--- a/personal-web/src/app/header/header.component.html
+++ b/personal-web/src/app/header/header.component.html
@@ -7,25 +7,61 @@
       href="https://fonts.googleapis.com/css2?family=Kanit:ital,wght@1,300&family=Noto+Sans+Display:wght@400;800&family=Roboto:wght@500;900&family=Secular+One&display=swap"
       rel="stylesheet">
   </head>
+
+  <!--
   <nav>
 
-
     <section class="nav-name">
-      <a href="/"> <svg xmlns="http://www.w3.org/2000/svg" x="0px" y="0px"
-        width="64" height="64"
-        viewBox="0 0 128 128"
-        ><path fill="#fff" d="M64 14A50 50 0 1 0 64 114A50 50 0 1 0 64 14Z"></path><path fill="#444b54" d="M64,117c-29.2,0-53-23.8-53-53s23.8-53,53-53s53,23.8,53,53S93.2,117,64,117z M64,17c-25.9,0-47,21.1-47,47s21.1,47,47,47s47-21.1,47-47S89.9,17,64,17z"></path><path fill="#444b54" d="M86.5 52h-45c-1.7 0-3-1.3-3-3s1.3-3 3-3h45c1.7 0 3 1.3 3 3S88.2 52 86.5 52zM86.5 67h-45c-1.7 0-3-1.3-3-3s1.3-3 3-3h45c1.7 0 3 1.3 3 3S88.2 67 86.5 67z"></path><g><path fill="#444b54" d="M86.5,82h-45c-1.7,0-3-1.3-3-3s1.3-3,3-3h45c1.7,0,3,1.3,3,3S88.2,82,86.5,82z"></path></g></svg>
-
+      <a href="/">
         Wilton Martinez</a>
     </section>
 
     <section class="nav-links-container">
-      <div class="links">
-        <a class="about" routerLink="/about">Home</a>
-        <a class="resumen" routerLink="/resumen">Resumen</a>
-        <a class="proyecto" routerLink="/proyectos">Proyectos</a>
-        <!--<a class="contacto" routerLink="/contacto">Contacto</a>-->
-      </div>
+      <ul class="links">
+        <li class="opciones"><a id="op" routerLink="/">Opciones</a>
+          <ul>
+            <li><a class="about" routerLink="/about">Home</a></li>
+            <li> <a class="resumen" routerLink="/resumen">Resumen</a></li>
+            <li> <a class="proyecto" routerLink="/proyectos">Proyectos</a></li>
+          </ul>
+        </li>
+        <li class="fuera"><a class="about" routerLink="/about">Home</a></li>
+        <li class="fuera"> <a class="resumen" routerLink="/resumen">Resumen</a></li>
+        <li class="fuera"> <a class="proyecto" routerLink="/proyectos">Proyectos</a></li>
+
+        <a class="contacto" routerLink="/contacto">Contacto</a>
+      </ul>
     </section>
+  </nav>-->
+
+
+  <!-- start nav -->
+  <nav id="menu">
+    <section class="nav-name">
+      <a href="/">
+        Wilton Martinez</a>
+    </section>
+    <!-- start menu -->
+    <ul class="pri">
+      <li><a><svg xmlns="http://www.w3.org/2000/svg" x="0px" y="0px"
+        width="30" height="30"
+        viewBox="0 0 30 30"><path d="M 3 7 A 1.0001 1.0001 0 1 0 3 9 L 27 9 A 1.0001 1.0001 0 1 0 27 7 L 3 7 z M 3 14 A 1.0001 1.0001 0 1 0 3 16 L 27 16 A 1.0001 1.0001 0 1 0 27 14 L 3 14 z M 3 21 A 1.0001 1.0001 0 1 0 3 23 L 27 23 A 1.0001 1.0001 0 1 0 27 21 L 3 21 z"></path></svg></a>
+        <!-- start menu desplegable -->
+        <ul>
+          <li><a class="about" routerLink="/about">Home</a></li>
+          <li> <a class="resumen" routerLink="/resumen">Resumen</a></li>
+          <li> <a class="proyecto" routerLink="/proyectos">Proyectos</a></li>
+        </ul>
+        <!-- end menu desplegable -->
+      </li>
+    </ul>
+
+    <ul class="big">
+      <li><a class="about" routerLink="/about">Home</a></li>
+      <li> <a class="resumen" routerLink="/resumen">Resumen</a></li>
+      <li> <a class="proyecto" routerLink="/proyectos">Proyectos</a></li>
+    </ul>
+    <!-- end menu -->
   </nav>
+  <!-- end nav -->
 </header>
