--- a/personal-web/src/app/footer/footer.component.css
+++ b/personal-web/src/app/footer/footer.component.css
@@ -85,3 +85,37 @@ footer .container-links-otros {
 
 
 }
+
+
+/*MEDIA QUERY PARA MÓVILES*/
+@media(max-width: 300px)
+{
+
+
+  footer {
+    width: 100%;
+    height: 20%;
+    font-size: 1rem;
+    grid-template-columns: none;
+    display: grid;
+    grid-template-rows: repeat(2, 1fr);
+    padding-top: 0px;
+    padding-bottom: 20px;
+  }
+
+
+  footer .container-links-otros {
+    grid-template-columns: none;
+    display: grid;
+    grid-template-rows: repeat(3, 1fr);
+    place-self: center;
+    gap: 10px;
+  }
+
+  footer .container-links-derecho
+  {
+    margin-left: 10px;
+    place-self: center;
+  }
+
+}
