--- a/personal-web/src/app/proyecto/proyecto.component.css
+++ b/personal-web/src/app/proyecto/proyecto.component.css
@@ -219,4 +219,187 @@ main .web .image-web img {
   }
 
 
+  main .moto .image-moto img {
+    margin: auto;
+    display: block;
+  }
+
+
+  main .ciclas .image-ciclas   img {
+    margin: auto;
+    display: block;
+  }
+
+
+
+  main .web .image-web img {
+    margin: auto;
+    display: block;
+  }
+
+
+
+}
+
+
+/*MEDIA QUERY PARA MÓVILES*/
+@media(max-width: 400px)
+{
+  main{
+    padding-left: 0px;
+    padding-right: 0px;
+  }
+
+
+  main .introduccion
+  {
+    margin-left: 0px;
+    margin-right: 0px;
+  }
+
+  main .introduccion .title
+  {
+
+    font-size: 2rem;
+  }
+
+  main .introduccion .description
+  {
+    font-size: 1.5rem;
+    padding-left: 10px;
+    margin-left: 30px;
+    margin-right: 30px;
+    margin-top: 20px;
+
+  }
+
+
+  main .moto
+  {
+    display: grid;
+    grid-template-columns: none;
+    grid-template-rows: repeat(2, 0.7fr);
+
+  }
+
+  main .moto .moto-title h3
+  {
+    font-size: 2rem;
+    margin-top: 20px;
+
+  }
+
+  main .moto .moto-title p
+  {
+    font-size: 1rem;
+
+  }
+
+  main .moto .moto-title
+  {
+
+    
+    margin-left: 25px;
+    margin-right: 25px;
+    margin-bottom: 0px;
+
+  }
+
+
+  main .moto .image-moto .image1 {
+    margin-bottom: 1.5rem;
+  }
+
+
+
+  main .ciclas
+  {
+    display: grid;
+    grid-template-columns: none;
+    grid-template-rows: repeat(2, 0.58fr);
+    
+
+  }
+
+
+  main .ciclas .ciclas-title
+  {
+    margin-left: 0px;
+    margin-bottom: 0px;
+
+  }
+
+  main .ciclas .ciclas-title h3
+  {
+    font-size: 2rem;
+    margin-top: 20px;
+
+  }
+
+  main .ciclas .ciclas-title p
+  {
+    font-size: 1rem;
+
+  }
+
+  main .ciclas .ciclas-title
+  {
+
+    
+    margin-left: 25px;
+    margin-right: 25px;
+    margin-bottom: 0px;
+
+  }
+
+
+  main .ciclas .image-ciclas .image2 {
+    margin-bottom: 1.5rem;
+  }
+
+
+
+  main .web
+  {
+    display: grid;
+    grid-template-columns: none;
+    grid-template-rows: repeat(2, 0.58fr);
+
+  }
+
+  main .web .web-title
+  {
+    margin-left: 0px;
+    margin-bottom: 0px;
+
+  }
+  main .web .web-title h3
+  {
+    font-size: 2rem;
+    margin-top: 20px;
+
+  }
+
+  main .web .web-title p
+  {
+    font-size: 1rem;
+
+  }
+
+  main .web .web-title
+  {
+
+    
+    margin-left: 25px;
+    margin-right: 25px;
+    margin-bottom: 0px;
+
+  }
+
+
+  main .web .image-web .image3 {
+    margin-bottom: 1.5rem;
+  }
+
+
 }
