--- a/personal-web/src/app/resumen/resumen.component.css
+++ b/personal-web/src/app/resumen/resumen.component.css
@@ -3,6 +3,14 @@
   --organizar-display: inline-block;
 }
 
+
+*
+{
+
+  padding: 0px;
+  margin: 0px;
+}
+
 main {
   width: 100%;
   display: grid;
@@ -50,7 +58,8 @@ main .Lenguages-programming {
   display: grid;
   grid-template-columns: repeat(4, 1fr);
   place-self: center;
-  padding-top: 8px;
+  padding-top: 10px;
+  padding-bottom: 10px;
   margin-left: 200px;
   margin-right: 200px;
   position: relative;
@@ -85,8 +94,8 @@ main .tools {
   display: grid;
   grid-template-columns: repeat(4, 1fr);
   place-self: center;
-  padding-top: 8px;
-   /*grid-auto-columns: 180px*/
+  padding-top: 10px;
+  padding-bottom: 10px;
   margin-left: 200px;
   margin-right: 200px;
   position: relative;
@@ -136,17 +145,17 @@ box-shadow: -1px 6px 31px 2px rgba(77,77,255,1);
 main .last .skills {
   place-self: center;
   margin-top: 10px;
-  margin-left: 10px;
-  margin-right: 10px;
-  margin-bottom: 10px;
+  margin-left: 30px;
+  margin-right: 30px;
+  margin-bottom: 30px;
   list-style-type: none;
 }
 
 main .last .lenguages {
   place-self: initial;
   margin-top: 10px;
-  margin-left: 10px;
-  margin-right: 10px;
+  margin-left: 30px;
+  margin-right: 30px;
   margin-bottom: 10px;
   list-style-type: none;
 
@@ -154,7 +163,7 @@ main .last .lenguages {
 
 
 li {
-  line-height: 40px;
+  line-height: 35px;
   border-bottom: #4d4dff solid 6px;
   font-family: 'Roboto', sans-serif;
 }
@@ -186,6 +195,12 @@ h3 {
     margin-left: 0px;
   }
 
+  main .tools
+  {
+    margin-right: 0px;
+    margin-left: 0px;
+  }
+
   main .Lenguages-programming div {
 
     text-align: center;
@@ -205,6 +220,126 @@ h3 {
     margin-right: 10px;
     margin-left: 10px;
   }
+
+}
+
+/*MEDIA QUERY PARA MÓVILES*/
+@media(max-width: 400px)
+{
+
+
+  main .resumen
+  {
+    font-size: 2.3rem;
+  }
+
+  main .title-programming
+  {
+    font-size: 1.7rem;
+    margin-top: 20px
+  }
+
+  main .title-tools
+  {
+    font-size: 1.7rem;
+  }
+
+
+  main .last
+  {
+
+    font-size: 1rem;
+  }
+
+
+  main .Lenguages-programming
+  {
+
+    display: grid;
+    grid-template-columns: repeat(2, 1fr);
+    width: 70%;
+
+
+  }
+
+  img, svg
+  {
+    width: 35%;
+  }
+
+  div p
+{
+  font-size: 1rem;
+}
+
+main .Lenguages-programming .css {
+  grid-column: 1 / span 2;
+  place-self: center;
+
+}
+
+main .tools {
+  display: grid;
+  grid-template-columns: repeat(2, 1fr);
+  width: 70%;
+
+}
+
+
+main .tools .flask {
+  grid-column: 1 / span 2;
+  place-self: center;
+}
+main .Lenguages-programming .css img {
+  width: 50px;
+  height: 50px;
+}
+
+
+main .tools .flask img {
+  width: 50px;
+  height: 50px;
+}
+
+
+
+
+
+li {
+  line-height: 25px;
+
+}
+
+main .last {
+  grid-template-columns: none;
+  display: grid;
+  grid-template-rows: repeat(2, 0.7fr);
+  width: 70%;
+}
+
+
+main .last h3 {
+  font-size: 1.7rem;
+}
+
+
+main .last .lenguages
+{
+  place-self: center;
+  margin-left: 0px;
+  margin-right: 0px;
+  width: 70%;
+}
+
+main .last .skills
+{
+  
+  margin-left: 0px;
+  margin-right: 0px;
+  width: 70%;
+
+}
+
 
 }
 
