--- a/personal-web/src/app/about/about.component.css
+++ b/personal-web/src/app/about/about.component.css
@@ -11,29 +11,34 @@ main {
   width: 100%;
   display: grid;
   grid-template-columns: repeat(2, 1fr);
-
+  gap:20px;
+  padding-top: 40px;
+  padding-bottom: 40px;
+  padding-right: 40px;
+  padding-left: 40px;
 
 }
 
 main .main-perfil {
 
 
+  width: 100%;
   height: 500px;
   position: relative;
   place-self: center;
-  margin-top: 40px;
-  margin-bottom: 30px
+  /*margin-top: 40px;
+  margin-bottom: 30px*/
 
 }
 
 main .main-perfil #imagen-princial
 {
 
-  max-width: 90%;
-  max-height: 95%;
+  max-width: 100%;
+  max-height: 100%;
   object-fit: contain;
   place-self: center;
-  margin-left: 20px;
+  /*margin-left: 20px;*/
 
 }
 
@@ -108,9 +113,10 @@ main .main-descripcion {
   /*background-color: #d2e9ff;*/
   /*border: black solid 1px;*/
   /*border-left: #4d4dff solid 3px;*/
+  width: 100%;
   position: relative;
   place-self: center;
-  margin-right: 25px;
+  /*margin-right: 25px;*/
 
 
 
@@ -170,31 +176,18 @@ main .main-descripcion .botones .btn{
 
   main{
 
+    gap: 0px;
     grid-template-columns: none;
     grid-template-rows: repeat(2, 1fr);
 
 
   }
 
-  main .main-perfil {
-
-
-    height: 500px;
-    width:600px;
-    place-self: center;
-    margin-bottom: 0px;
-    margin-top: 80px
+  main .main-perfil
+  {
+    margin-top: 30px;
 
   }
-
-
-  main .main-descripcion {
-
-    width:600px;
-    margin-right: 0px;
-
-  }
-
   .saludo {
     font-size:4rem;
     place-self: center;
@@ -211,6 +204,13 @@ main .main-descripcion .botones .btn{
 @media(max-width: 400px)
 {
 
+  main
+  {
+    padding-top: 20px;
+    padding-bottom: 20px;
+    padding-left: 20px;
+    padding-right: 20px;
+  }
   main .main-perfil {
 
 
@@ -218,17 +218,12 @@ main .main-descripcion .botones .btn{
     height: 180px;
     place-self: center;
     margin-bottom: 0px;
-    margin-top: 90px;
+    margin-top:70px;
     /*border: black solid 2px;*/
 
   }
 
-  main .main-descripcion {
 
-    width:100%;
-    padding-right: 30px;
-    padding-left: 30px;
-  }
 
   .saludo {
     font-size:1.5rem;
@@ -268,4 +263,5 @@ main .main-perfil div
 
 }
 */
+
 }
