--- a/personal-web/src/app/header/header.component.css
+++ b/personal-web/src/app/header/header.component.css
@@ -210,7 +210,7 @@ nav .pri {
 
   #menu ul li {
     position: relative;
-    float: left;
+    float: right;
     margin: 0;
     padding: 0;
   }
@@ -227,7 +227,7 @@ nav .pri {
     display: none;
     position: absolute;
     top: 100%;
-    left: 0;
+    right: 0;
     background: #eee;
     padding: 0;
   }
@@ -252,3 +252,6 @@ nav .pri {
     display: block;
   }
 }
+
+
+
