--- a/personal-web/src/app/proyecto/proyecto.component.css
+++ b/personal-web/src/app/proyecto/proyecto.component.css
@@ -2,8 +2,8 @@ main {
   width: 100%;
   display: grid;
   grid-template-rows: repeat(1, 1fr);
-  padding-left: 200px;
-  padding-right: 200px;
+ /* padding-left: 200px;
+  padding-right: 200px;*/
 }
 
 main .introduccion {
@@ -32,12 +32,13 @@ main .introduccion .description {
 }
 
 main .moto {
-  width: 80%;
+  width: 70%;
   place-self: center;
   display: grid;
   grid-template-columns: repeat(2, 1fr);
   margin-bottom: 100px;
   margin-top: 60px;
+
   border-radius: 5px 5px 5px 5px;
   box-shadow: 7px 7px 15px #4d4dff;
 
@@ -95,7 +96,7 @@ main .moto .image-moto img {
 
 
 main .ciclas {
-  width: 80%;
+  width: 70%;
   place-self: center;
   display: grid;
   grid-template-columns: repeat(2, 1fr);
@@ -154,7 +155,7 @@ main .ciclas .image-ciclas img {
 }
 
 main .web {
-  width: 80%;
+  width: 70%;
   place-self: center;
   display: grid;
   grid-template-columns: repeat(2, 1fr);
@@ -213,10 +214,7 @@ main .web .image-web img {
 /*MEDIA QUERY PARA TABLETS*/
 @media(max-width: 768px)
 {
-  main{
-    padding-left: 0px;
-    padding-right: 0px;
-  }
+
 
 
   main .moto .image-moto img {
@@ -284,7 +282,7 @@ main .web .image-web img {
 
   main .moto .moto-title h3
   {
-    font-size: 2rem;
+    font-size: 1.7rem;
     margin-top: 20px;
 
   }
@@ -298,7 +296,7 @@ main .web .image-web img {
   main .moto .moto-title
   {
 
-    
+
     margin-left: 25px;
     margin-right: 25px;
     margin-bottom: 0px;
@@ -317,7 +315,7 @@ main .web .image-web img {
     display: grid;
     grid-template-columns: none;
     grid-template-rows: repeat(2, 0.58fr);
-    
+
 
   }
 
@@ -331,7 +329,7 @@ main .web .image-web img {
 
   main .ciclas .ciclas-title h3
   {
-    font-size: 2rem;
+    font-size: 1.7rem;
     margin-top: 20px;
 
   }
@@ -345,7 +343,7 @@ main .web .image-web img {
   main .ciclas .ciclas-title
   {
 
-    
+
     margin-left: 25px;
     margin-right: 25px;
     margin-bottom: 0px;
@@ -375,7 +373,7 @@ main .web .image-web img {
   }
   main .web .web-title h3
   {
-    font-size: 2rem;
+    font-size: 1.7rem;
     margin-top: 20px;
 
   }
@@ -389,7 +387,7 @@ main .web .image-web img {
   main .web .web-title
   {
 
-    
+
     margin-left: 25px;
     margin-right: 25px;
     margin-bottom: 0px;
